Added example screenshot for how to run