@@ -4,12 +4,15 @@ Repository for our Software Engineering group's project prototype. **In it's cur
 ## How to Run
 The project is built on JavaFX, which is the main dependency. You can find install instructions for JavaFX on their website: https://openjfx.io
 
+You need to change your runtime configuration to the following:
+```
+--module-path <HIS PATH FOR LIBRARY> --add-modules javafx.controls,javafx.fxml
+```
+See the screenshot below for an example in Eclipse:
+
+![ScreenShot](Dependency%20example.png)
+
 Any IDE, we used Visual Studio Code and Eclipse during development.
-
-The following command will run the app from command line:
-```
-
-```
 
 ## Authors
 Riley Adams
